# chpoker

./: .gitignore  Containerfile  Makefile  README.md  chpoker.toml.example  pyproject.toml
chpoker/: __init__.py  aiosaml.py  clientnotificationservice.py  config.py  identity.py  jsonencoder.py  pokerservice.py  webserver.py  websocketrpcprotocol.py
chpoker/models/: identity.py  user.py
chpoker/resources/: index.html
chpoker/saml_attributes/: basic.py  saml_uri.py
